[package]
name = "q144-binary-tree-preorder-traversal"
version = "0.1.0"
authors = ["Dimos Double <doubledimos@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leetcode_utils = { path = "../leetcode_utils" }